2014-11-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* integria_db.sql: Updated the 'minor_release' value and added
	two new maintenance related tokens to the table 'tconfig'.

2014-11-07  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Added a new task to the daily
	check.

2014-11-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* godmode/setup/setup_maintenance.php: Added a new token to setup
	the days to delete the data of the files tracking.

	* include/help/en/help_old_files_track.php,
	  include/help/es/help_old_files_track.php: Added files. Help files
	for the setup of the deletion of old files tracking data.

	* include/integria_cron.php: Added the function "delete_old_files_track_data"
	to delete the old files tracking data.

2014-11-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* extras/mr/15.sql: Added file. New MR15 with changes on the table
	'tattachment' and the adition of the table 'tattachment_track'.

	* integria_db.sql: Updated with the changes of the MR15.

	* images/clipboard.png: Added file.

	* godmode/setup/setup_maintenance.php: Added a new token to setup
	the days to delete the data of the files of the new "File Sharing"
	section.

	* include/help/en/help_old_fs_files.php,
	  include/help/es/help_old_fs_files.php: Added files. Help files
	for the setup of the deletion of old shared files.

	* operation/file_sharing/FileSharingAdapters.js,
	  operation/file_sharing/FileSharingFile.class.php,
	  operation/file_sharing/FileSharingListController.js,
	  operation/file_sharing/FileSharingPackage.class.php,
	  operation/file_sharing/list.php,
	  operation/file_sharing/manage.php,
	  operation/file_sharing/upload.php: Added files. This files conform
	the new "File Sharing" section.
	
	* operation/main_menu.php: Added the "File Sharing" section inside
	"Support".

	* include/styles/integria.css: Updated to give styles to the new
	elements of the new "File Sharing" section.
